--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Swift Tests
 on:
   push:
     branches: [ "master" ]
@@ -15,6 +15,9 @@ jobs:
         swift: ["5.7", "5.8"]
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Run tests
-      run: swift test
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      - name: Run Swiftlint
+        run: swiftlint
+      - name: Run swift tests
+        run: swift test
